2009-12-22  Augusto Devegili  <monipol@users.sourceforge.net>

	* VERSION: releasing version 0.29.10.3 of fink-mirrors
	* apt: comment out the Wisconsin bindist

2009-12-21  Augusto Devegili  <monipol@users.sourceforge.net>

	* VERSION: releasing version 0.29.10.2 of fink-mirrors
	* get-mirror.pl: use decoded_content instead of content, new URL for GNU
	  mirrors
	* cpan, freebsd, gimp, gnome, gnu, kde: mirror updates. CPAN mirrors marked
	  as stale and bad in http://mirrors.cpan.org/status.cgi were removed

2009-11-21  Augusto Devegili  <monipol@users.sourceforge.net>

	* README.contacts: Fix Todai's e-mail address

2009-11-15  Augusto Devegili  <monipol@users.sourceforge.net>

	* VERSION: releasing version 0.29.10.1 of fink-mirrors

2009-11-15  Augusto Devegili  <monipol@users.sourceforge.net>

	* master, rsync: Remove trd.no.eu.finkmirrors.net (rsync and distfiles).
	Reply from Hauglann Maria Wulff: 'We are planning to phase out this server:
	pasta.cs.uit.no, so we are not interested in resuming the Fink rsync mirror
	service on this machine.'
	Bring back dub.ie.eu.finkmirrors.net after having contacted them about
	following our rsync update policy.
	Comment out msn.wi.us.finkmirrors.net as they are still not offering Fink.
	According to a reply received by Alex Hansen, they intend to.

2009-11-01  Augusto Devegili  <monipol@users.sourceforge.net>

	* master, rsync: Remove nte.fr.eu.finkmirrors.net (rsync and distfiles).
	  Cedric's reply to my e-mail: 'Sorry for shutting down the service, but I
	  had to stop the dedicated server that was involved in the fink mirror.
	  I'll contact you again if I have the oportunity to server Fink again.'

2009-04-10  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* install.sh: it wasn't actually *installing* the postgresql mirror :(

2009-04-04  Dave Morrison  <drm@finkproject.org>

	* VERSION: releasing version 0.28.7.1 of fink-mirrors

2009-03-07  Dave Morrison  <drm@finkproject.org>

	* all: updated Copyright notice
